Bug 1195844 - When checking for old DisplayLink versions, look for a few other DLLs. r=jrmuizel, a=sledru